<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/order_list_view_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--background="#0000" makes background transparent (removes ugly grey)-->
    <!--<ImageButton
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/done_button"
        android:background="#0000"
        android:adjustViewBounds="true"
        android:maxWidth="70dp"
...
